<resources>
    <string name="app_name">ERate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_rub">RUB</string>
    <string name="currency_usd">USD</string>
    <string name="currency_nok">NOK</string>
    <string name="currency_rate">1 = 1</string>
    <string name="currency_name_RUB">Russian Rouble</string>
    <string name="currency_name_NOK">Norwegian Krone</string>
    <string name="add_fragment_button">Add a fragment</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="first_currency">Selected: </string>
    <string name="second_currency">Second Currency:</string>
</resources>
