<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.foreseer.erate.Fragments.RateFragment"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView_firstCurrency"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/russia"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView_secondCurrency"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/norway"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView_secondCurrency"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/currency_nok"
        android:textSize="20sp"
        app:layout_constraintRight_toLeftOf="@+id/imageView_secondCurrency"
        app:layout_constraintTop_toTopOf="@+id/imageView_secondCurrency" />

    <TextView
        android:id="@+id/textView_firstCurrency"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/currency_rub"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/imageView_firstCurrency"
        app:layout_constraintTop_toTopOf="@+id/imageView_firstCurrency" />

    <TextView
        android:id="@+id/textView_currencyAmount"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/currency_rate"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView_firstCurrencyHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/currency_name_RUB"
        android:textAlignment="textEnd"
        android:textSize="13sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/imageView_firstCurrency"
        app:layout_constraintRight_toRightOf="@+id/textView_firstCurrency"
        app:layout_constraintTop_toBottomOf="@+id/imageView_firstCurrency" />

    <TextView
        android:id="@+id/textView_secondCurrencyHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/currency_name_NOK"
        android:textSize="13sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textView_secondCurrency"
        app:layout_constraintRight_toRightOf="@+id/imageView_secondCurrency"
        app:layout_constraintTop_toBottomOf="@+id/imageView_secondCurrency" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        android:background="?android:attr/detailsElementBackground"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/error"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_currencyAmount"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/textView_currencyAmount"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView_currencyAmount" />

</android.support.constraint.ConstraintLayout>
